objects/Systems__c.object
<CustomObject>
    <description>List of valid DMS/CRM/Leasing/Phone systems</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_System_Software__c</fullName>
        <description>Default System Software</description>
        <label>Default System Software</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLXSystem_ID__c</fullName>
        <label>SLXSystem ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLXVendor_ID__c</fullName>
        <label>SLXVendor ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_Sys_CreateDate__c</fullName>
        <label>SLX Sys CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_Vendor_CreateDate__c</fullName>
        <label>SLX Vendor CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <label>Segment Code</label>
        <picklist>
            <picklistValues>
                <fullName>AUTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Systems</label>
    <listViews>
        <fullName>AllCRMSystems</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>CRM</value>
        </filters>
        <label>All CRM Systems</label>
    </listViews>
    <listViews>
        <fullName>AllDMSSystems</fullName>
        <columns>NAME</columns>
        <columns>Default_System_Software__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>SLXSystem_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DMS</value>
        </filters>
        <label>All DMS Systems</label>
    </listViews>
    <listViews>
        <fullName>AllLeasingSystems</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Leasing</value>
        </filters>
        <label>All Leasing Systems</label>
    </listViews>
    <listViews>
        <fullName>AllPhoneSystems</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>SLXSystem_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Phone</value>
        </filters>
        <label>All Phone Systems</label>
    </listViews>
    <listViews>
        <fullName>AllSystems</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>SLXSystem_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Systems</label>
    </listViews>
    <listViews>
        <fullName>AllSystems_NAAT</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>SLXSystem_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>NAAT</value>
        </filters>
        <label>All Systems - NAAT</label>
    </listViews>
    <listViews>
        <fullName>AllSystems_PFW</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>SLXSystem_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>PFW</value>
        </filters>
        <label>All Systems - PFW</label>
    </listViews>
    <listViews>
        <fullName>All_Systems_AUTG</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLXVendor_ID__c</columns>
        <columns>SLXSystem_ID__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>AUTG</value>
        </filters>
        <label>All Systems - AUTG</label>
    </listViews>
    <nameField>
        <label>Vendor System</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>DMS_field_required</fullName>
        <active>true</active>
        <description>SLX Vendor Id required</description>
        <errorConditionFormula>ISNULL(SLXVendor_ID__c)</errorConditionFormula>
        <errorMessage>SLX DMS ID Field is required (and it should be unique to Vendors table)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SLX_VendorID_field_required</fullName>
        <active>true</active>
        <description>SLX Vendor Id required</description>
        <errorConditionFormula>ISNULL(SLXVendor_ID__c) || SLXVendor_ID__c = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>SLXVendor_ID__c</errorDisplayField>
        <errorMessage>SLX Vendor ID Field is required (and it should be unique to Vendors table)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>System_ID_field_required</fullName>
        <active>true</active>
        <description>When Phone or DMS is selected for System Type the System ID field should be populated.</description>
        <errorConditionFormula>AND(
OR( ISPICKVAL(Type__c, &quot;DMS&quot; ) ,
ISPICKVAL(Type__c, &quot;Phone&quot; ) ),
 LEN( SLXSystem_ID__c  ) =0  
)</errorConditionFormula>
        <errorDisplayField>SLXSystem_ID__c</errorDisplayField>
        <errorMessage>SLX System ID must be populated and unique for SalesLogix for DMS and Phone type systems.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_field_required</fullName>
        <active>true</active>
        <description>Type is required</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>The Type field is required</errorMessage>
    </validationRules>
</CustomObject>